<resources>
    <string name="app_name">Entertainment</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="drawer_items">
        <item>Navigation</item>
        <item>阴影和裁减</item>
        <item>图片和颜色</item>
        <item>全新的动画</item>
        <item>新增widget</item>
        <item>兼容适配</item>
    </string-array>

    <string name="pic_group">图片欣赏</string>
    <string name="pic_local">本地图片</string>
    <string name="pic_network">网络图片</string>

    <string name="fm_group">FM</string>
    <string name="fm_douban">豆瓣FM</string>

    <string name="music_group">音乐</string>
    <string name="music_local">本地音乐</string>
    <string name="music_spotify">Spotify</string>
    <string name="music_qq">QQ音乐</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_location_show">LocationShowActivity</string>


</resources>
